deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-app
  template:
    metadata:
      labels:
        app: resume-app
    spec:
      containers:
      - name: resume-app
        image: nikhilck/resume-app-nginx:3.0
        ports:
        - containerPort: 80
