resume-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod  
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure 
spec:
  tls:
  - hosts:
    - nikhilchavan.info
    secretName: nikhilchavan-info-tls 
  rules:
  - host: nikhilchavan.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: resume-service
            port:
              number: 80
